@@ -8,6 +8,9 @@ Changes - Apache::Reload change logfile
 
 =item 0.08-dev
 
+Remove modified modules before reloading them
+[Javier Ureuen Val]
+
 Imported from v0.07 into ASF SVN
 [Philip M. Gollucci <pgollucci@p6m7g8.com>]
 
